# RagProgrammingAssistant

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/src/: config.py  main.py
backend/src/rag/: generator.py  retriever.py
backend/src/retrieval/: models.py  semantic_search_engine.py
backend/src/routes/: health_check.py  query.py
backend/src/schemas/: requests.py  responses.py
data_pipeline/: models.py  pyproject.toml  requirements.txt
data_pipeline/notebooks/: data_analysis.ipynb  data_exploration.ipynb  dump_exploration.ipynb  prototyping.ipynb
data_pipeline/scripts/: 01_load_data_to_duck_db.py  01_load_xml_dump_data_to_duck_db.py  02_generate_embeddings_to_parquet.py  03_upload_embeddings_to_cloud_vectordb.py
data_pipeline/utils/: html_cleaner.py  logging_config.py
frontend/: Dockerfile  requirements.txt
frontend/src/: app.py
shared/: pyproject.toml  requirements.txt
shared/src/ragoverflow_shared/: html_cleaner.py  logging_config.py  models.py
