# data_pipeline/pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_pipeline"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
package-dir = {"data_pipeline" = "."}
packages = ["data_pipeline"]